# tmuxDash

./: .env.example  README.md  pyproject.toml  run.py
app/: main.py
app/routes/: auth_routes.py  tmux_routes.py
app/services/: tmux_service.py
app/templates/: index.html  login.html
