[project]
name = "tmuxdash"
version = "0.1.0"
description = "Web tmux viewer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansi2html>=1.9.2",
    "bcrypt>=5.0.0",
    "fastapi>=0.138.1",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]
